# teaching-2606-ICTP-SAIFR

./: .gitignore  README.md  export_pdf.sh  export_steps.js  jupytext.toml  lecture_plan.md  pyproject.toml  ~$nthesis of GenAI Use in the Physics & Astronomy Master’s Program-8.docx
.claude/: launch.json
docs/: index.html  lec5.html  lec7.html  lecture1a.html  lecture1b.html  lecture2.html  lecture2_v2.html  lecture3.draft.html  lecture3.html  lecture3_v2.html  lecture4.html  lecture4a.html  lecture5a.html  lecture5b.html  style_sheet.md
docs/lib/: lecture-boot.js  lecture-helpers.js  lecture.css
docs/old/: lecture1.html  lecture2.html  lecture3.html  lecture4b.html  lecture6.html
notebooks/: lec1a_refs.md  lec1b_abc_demos.ipynb  lec1b_abc_demos.py  s1_app_gw.ipynb  s1_app_gw.py  s1_pytorch_and_npe.ipynb  s1_pytorch_and_npe.py
plans/: handson_plan.md  lec1a_refs.md
scripts/: export_pdf.sh
src/samma_sbi/: __init__.py  abc.py  simulators.py  viz.py
